# liteviz-gs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
cmake/depends/: eigen.cmake  glad.cmake  tinyply.cmake
liteviz/: dataloader.h  renderer.h  utils.h  viewer.h  viewport.h
viewer/: dataloader.h  renderer.h  shader.h  viewer.h  viewport.h
viewer/shaders/: draw_splat.frag  draw_splat.vert
